--- a/WebDemo1/Site.Master
+++ b/WebDemo1/Site.Master
@@ -3,9 +3,11 @@
 <html>
 <head runat="server">
     <title>WebEx Demo</title>
- <!--   <link href="~/Styles/Site.css" rel="stylesheet" type="text/css" /> -->
+   
      <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
+   <link href="~/Styles/Site.css" rel="stylesheet" type="text/css" />
     <asp:ContentPlaceHolder ID="HeadContent" runat="server">
     </asp:ContentPlaceHolder>
 </head>
